--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anitta Excursiones</title>
+    <!-- Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <!-- Font Awesome (ICONOS)-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Hoja de Estilos-->
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -31,16 +37,6 @@
             <div class="playa arena-frente"></div>
         </div>
     </header>
-
-    <!-- <nav class="nav-bar">
-        <ul>
-            <li><a href="./index.html">Inicio</a></li>
-            <li><a href=""></a>Tours</li>
-            <li><a href=""></a>Información</li>
-            <li><a href=""></a>Nosotros</li>
-            <li><a href=""></a>Contacto</li>
-        </ul>
-    </nav> -->
 
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -142,7 +138,15 @@
     </main>
 
     <footer>
-
+        <div class="foot redes">
+            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-regular fa-envelope"></i></a>
+        </div>
+        <div class="foot copyright">
+            <h6>Copyright Anitta Excursiones 2022</h6>
+            <h6>Todos los derechos reservados</h6>
+        </div>
     </footer>
     <!-- BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
