--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 
-    <header>
+    <header class="container-fluid">
         <div class="banner">
             <div class="playa cielo"></div>
             <div class="playa sol"></div>
@@ -38,9 +38,10 @@
         </div>
     </header>
 
-    <nav class="navbar navbar-expand-lg">
+    <!-- NAV FUERA DEL HEADER PARA QUE FUNCIONE CORRECTAMENTE EL STICKY -->
+    <div class="container-fluid sticky-top">
+    <nav class="navbar navbar-expand-md">
         <div class="container-fluid">
-            <!-- <a class="navbar-brand" href="#">Navbar</a> -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -55,10 +56,10 @@
                     <a class="nav-link" href="#">Tours</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Información</a>
+                    <a class="nav-link" href="#">Transporte</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Nosotros</a>
+                    <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contacto</a>
@@ -66,10 +67,12 @@
             </div>
         </div>
     </nav>
+</div>
 
-    <main>
+    <main class="container-fluid">
         <h1>Anitta Excursiones</h1>
         <h2>Una experiencia única en Santo Domingo</h2>
+        
         <!-- GALERIA DE IMAGENES - HOME  -->
         <div class="galeria">
             <div class="gal gal-img-1">
@@ -137,7 +140,7 @@
 
     </main>
 
-    <footer>
+    <footer class="container-fluid">
         <div class="foot redes">
             <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
@@ -148,6 +151,7 @@
             <h6>Todos los derechos reservados</h6>
         </div>
     </footer>
+
     <!-- BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
