--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -52,13 +52,13 @@
                         <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Tours</a>
+                        <a class="nav-link" href="../pages/tours.html">Tours</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Transporte</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Nosotros</a>
+                        <a class="nav-link active" href="../pages/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contacto</a>
@@ -100,43 +100,6 @@
             </div>
         </div>
 
-        <!-- <div class="nosotros">
-            <div class="nos-img">
-                <img src="../img/nosotros.png" alt="nosotros">
-            </div>
-
-            <div class="nos-sobremi">
-                <h2>Anitta de La Serna</h2>
-                <h3>Ejecutiva de ventas</h3>
-                <p>Soy Argentina, vivo en Republica Dominicana y desde hace muchos años conozco las maravillas de este
-                    hermoso país.</p>
-            </div>
-
-            <div class="nos-empresa">
-                <h3>Anitta Excursiones</h3>
-                <p>
-                    Somos una empresa dedicada desde hace 10 años a la venta de excursiones con un equipo profesional que
-                    atiende todos los detalles para que su elección sea la mejor entre muchas. Desde la atencion
-                    personalizada hasta selección de propuestas, nuestro compromiso con nuestros clientes hace que día a
-                    día nuestro prestigio crezca en este bello país.
-                </p>
-                <p>
-                    Trabajamos bajo todos los lineamientos de las leyes dominicanas, permisos, seguros y licencias, esto
-                    es muy importante ya que se encuentran muchas páginas donde las excursiones son mucho más económicas
-                    debido a la falta de estas cosas que son esenciales.
-                </p>
-                <p>
-                    Contamos con Licencia de Tour Operador de la Resolución 166/2013 del Ministerio de Turismo ( MITUR)
-                    de República Diminicana, con RNC 1-30-92731-6 y domicilio social en Calle Galicia, s/n, Bávaro-Punta
-                    Cana en el municipio de Higüy (República Dominicana).
-                </p>
-                <p>
-                    Por eso <span>Anitta Excursiones</span> selecciona a los mejores para que el éxito de sus vacaciones
-                    esté asegurado.
-                </p>
-            </div>
-
-        </div> -->
     </main>
 
     <footer class="container-fluid">
