--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Tours</a>
+                    <a class="nav-link" href="./pages/tours.html">Tours</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Transporte</a>
