--- a/pages/tours.html
+++ b/pages/tours.html
@@ -79,13 +79,18 @@
                     <div>
                         <h3>Santo Domingo City Tour</h3>
                         <div class="myCard">
-                            <div class="frente">
+                            <div class="d-flex justify-content-center frente">
                                 <img src="../img/gal-01.jpg" alt="">
                             </div>
                             <div class="dorso">
                                 <p>
-                                    Durante esta excursión de 10 horas desde Punta Cana, siga a su guía local para visitar monumentos históricos de la Parte Colonial. Conozca el Palacio Presidencial Nacional, obtenga fantásticas vistas del centro y compre recuerdos en las tiendas locales. Se incluye almuerzo en un restaurante tradicional dominicano y transporte de ida y vuelta desde los hoteles de Punta Cana.
+                                    Recorriendo monumentos históricos de la Parte Colonial.
+                                    Conozca el Palacio Presidencial Nacional y obtenga fantásticas vistas del centro.
+                                    Se incluye almuerzo en un restaurante tradicional dominicano y transporte de ida y vuelta desde los hoteles de Punta Cana.
                                 </p>
+                                <div class="d-flex justify-content-center">
+                                    <a class="btn btn-outline-primary" href="#" role="button">Reserva</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -95,13 +100,16 @@
                     <div>
                         <h3>Dolphin Park</h3>
                         <div class="myCard">
-                            <div class="frente">
+                            <div class="d-flex justify-content-center frente">
                                 <img src="../img/dolphinPark.jpg" alt="">
                             </div>
                             <div class="dorso">
                                 <p>
                                     Dolphin Park es el lugar indicado para pasar un día distinto, un parque natural ubicado en Punta Cana, cuyo atractivo principal es el nado e interacción con delfines en el mar. 
                                 </p>
+                                <div class="d-flex justify-content-center">
+                                    <a class="btn btn-outline-primary" href="#" role="button">Reserva</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -111,13 +119,16 @@
                     <div>
                         <h3>Isla Saona</h3>
                         <div class="myCard">
-                            <div class="frente">
+                            <div class="d-flex justify-content-center frente">
                                 <img src="../img/islaSaona.jpg" alt="">
                             </div>
                             <div class="dorso">
                                 <p>
                                     Vive una experiencia inolvidable en la isla Saona, una de las excursiónes más populares en la República Dominicana. Explora la playa tropical por excelencia con sus palmeras, arenas blancas y aguas turquesas.
                                 </p>
+                                <div class="d-flex justify-content-center">
+                                    <a class="btn btn-outline-primary" href="#" role="button">Reserva</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -127,7 +138,7 @@
                     <div>
                         <h3>Compay Safari</h3>
                         <div class="myCard">
-                            <div class="frente">
+                            <div class="d-flex justify-content-center frente">
                                 <img src="../img/safari.jpg" alt="">
                             </div>
                             <div class="dorso">
@@ -136,6 +147,53 @@
                                     Viaje por el campo y pase por plantaciones de caña de azúcar, café, cacao y tabaco.
                                     Conozca la Basílica Catedral Nuestra Señora de la Altagracia, conocida por sus formas triangulares.
                                 </p>
+                                <div class="d-flex justify-content-center">
+                                    <a class="btn btn-outline-primary" href="#" role="button">Reserva</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- COL N°5 -->
+                <div class="col-lg-4 col-md-6 col-sm-12 pb-4">
+                    <div>
+                        <h3>Catalina Excursión</h3>
+                        <div class="myCard">
+                            <div class="d-flex justify-content-center frente">
+                                <img src="../img/catalina.jpg" alt="">
+                            </div>
+                            <div class="dorso">
+                                <p>
+                                    Navegará a lo largo de la costa de República Dominicana hasta la isla Catalina para relajarse en sus idílicas playas y explorar el Muro, el famoso sitio de buceo de la zona.
+                                    También tendrá acceso a un bar abierto, mientras disfruta de música en vivo y entretenimiento.
+                                    Incluye equipo de snorkel, transporte y bebidas.
+                                </p>
+                                <div class="d-flex justify-content-center">
+                                    <a class="btn btn-outline-primary" href="#" role="button">Reserva</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- COL N°6 -->
+                <div class="col-lg-4 col-md-6 col-sm-12 pb-4">
+                    <div>
+                        <h3>Salto del Limon</h3>
+                        <div class="myCard">
+                            <div class="d-flex justify-content-center frente">
+                                <img src="../img/limon.jpg" alt="">
+                            </div>
+                            <div class="dorso">
+                                <p>
+                                    Comienza tomando la nueva carretera al pueblo de pescadores de Miches.
+                                    Un viaje para observar la campiña a lo largo de la costa y la cordillera de Anamuya.
+                                    Irá a bordo de un catamarán de lujo en Las Cañitas.
+                                    Explore las magníficas vistas de la catarata El Limón (36 metros).
+                                    Le cautivará su espectacular belleza. Disfrutará de un almuerzo en un rancho rural típico.
+                                </p>
+                                <div class="d-flex justify-content-center">
+                                    <a class="btn btn-outline-primary" href="#" role="button">Reserva</a>
+                                </div>
                             </div>
                         </div>
                     </div>
