--- a/pages/tours.html
+++ b/pages/tours.html
@@ -55,7 +55,7 @@
                         <a class="nav-link active" href="../pages/tours.html">Tours</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Transporte</a>
+                        <a class="nav-link" href="../pages/transporte.html">Transporte</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
