--- a/pages/transporte.html
+++ b/pages/transporte.html
@@ -55,10 +55,10 @@
                         <a class="nav-link" href="../pages/tours.html">Tours</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/transporte.html">Transporte</a>
+                        <a class="nav-link active" href="../pages/transporte.html">Transporte</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="../pages/nosotros.html">Nosotros</a>
+                        <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contacto</a>
@@ -69,9 +69,44 @@
     </nav>
 
     <main class="container-fluid">
-        <h1>Sobre nosotros</h1>
+        <h1>Transporte</h1>
 
-        <div class="row nosotros">
+        <div class="row justify-content-center transporte">
+            <div class="col-10 vehiculos">
+            </div>
+            <div class="col-md-6 col-sm-12">
+                <h3>Nuestros Traslados</h3>
+                <p>
+                    Organizamos tus traslados desde los aeropuertos de Punta Cana, La Romana o Santo Domingo.
+                    Nuestra flota de vehículos te llevarán desde los distintos aeropuertos a cualquiera de los magníficos resorts ubicados en las zonas de Bayahibe, Punta Cana, Zona Bávaro, Uvero Alto y Santo Domingo.
+                </p>
+                <p>
+                    Confía en nuestros traslados en Punta Cana para que comiences a disfrutar todo lo que este increíble destino te ofrece, desde el mismo momento de tu llegada.
+                    Atracciones acuáticas, lanchas rápidas de carreras, navegación en catamarán, barcos de fiesta, pesca deportiva en aguas profundas, cruceros, spas flotantes, natación con delfines, cruceros de esnórquel, cabalgatas, natación con tiburones y mantarrayas, observación de ballenas y exploración de arrecifes.
+                </p>
+                <p>
+                    Utiliza nuestros servicios de transporte para visitar Santo Domingo, la capital más antigua del Nuevo Mundo, la primera ciudad fundada en América.
+                <p>
+                    No pierdas la oportunidad de reservar una excursión para visitar islas como Catalina o Saona, en las cuales no importa cuál sea tu idea de paraíso, seguro la encontrarás.
+                </p>    
+            </div>
+
+            <div class="col-md-6 col-sm-12">
+                <h3>
+                    Siempre encontraremos una manera de exceder tus expectativas!
+                </h3>
+                <p>
+                    Utiliza nuestro sistema seguro de reserva de traslados desde los aeropuertos de Punta Cana, Santo Domingo o Bayahibe para garantizar un comienzo y regreso seguro y sorprendente de tu viaje. Ya sea que viajes por vacaciones, romance, relax o una emocionante aventura, permite que tu viaje comience de la mejor y más segura manera.
+                <p>
+                    Nuestros vehículos cuentan con <span>servicio de WiFi, cámaras de seguridad, GPS, botellas de agua fresca y aire acondicionado.</span> Nuestros precios incluyen todo lo necesario para que seas el protagonista principal de nuestro trabajo. También tendrás un seguro de accidentes incluido en las excursiones en Punta Cana.
+                </p>
+                <p>
+                    Evita los imprevistos, si buscas tranquilidad en uno de los viajes más inolvidables de tu vida, para experimentarlo con total seguridad y comodidad, ¿qué esperas para reservar tu transporte y comenzar a planear tus vacaciones? Puedes hacer tu reserva online hoy mismo! Contacta con nosotros y confíanos tus traslados.
+                </p>    
+            </div>
+        </div>
+
+        <!-- <div class="row nosotros">
             <div class="col-md-6 col-sm-12">
                 <h3>Anitta Excursiones</h3>
                 <p>
@@ -98,7 +133,7 @@
             <div class="col-md-6 col-sm-12 my-auto">
                 <img src="../img/empresa2.jpg" class="img-fluid p-4" alt="Nosotros">
             </div>
-        </div>
+        </div> -->
 
     </main>
 
