--- a/pages/tours.html
+++ b/pages/tours.html
@@ -41,7 +41,7 @@
     <div class="container-fluid sticky-top">
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
