--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -58,10 +58,10 @@
                         <a class="nav-link" href="../pages/transporte.html">Transporte</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="../pages/nosotros.html">Nosotros</a>
+                        <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                        <a class="nav-link active" href="../pages/contacto.html">Contacto</a>
                     </li>
                 </div>
             </div>
@@ -69,36 +69,28 @@
     </nav>
 
     <main class="container-fluid">
-        <h1>Sobre nosotros</h1>
+        <h1>Contactenos</h1>
 
-        <div class="row nosotros">
-            <div class="col-md-6 col-sm-12">
-                <h3>Anitta Excursiones</h3>
-                <p>
-                    Somos una empresa dedicada desde hace 10 años a la venta de excursiones con un equipo profesional que
-                    atiende todos los detalles para que su elección sea la mejor entre muchas. Desde la atencion
-                    personalizada hasta selección de propuestas, nuestro compromiso con nuestros clientes hace que día a
-                    día nuestro prestigio crezca en este bello país.
-                </p>
-                <p>
-                    Trabajamos bajo todos los lineamientos de las leyes dominicanas, permisos, seguros y licencias, esto
-                    es muy importante ya que se encuentran muchas páginas donde las excursiones son mucho más económicas
-                    debido a la falta de estas cosas que son esenciales.
-                </p>
-                <p>
-                    Contamos con Licencia de Tour Operador de la Resolución 166/2013 del Ministerio de Turismo (MITUR)
-                    de República Diminicana, con RNC 1-30-92731-6 y domicilio social en Calle Galicia, s/n, Bávaro-Punta
-                    Cana en el municipio de Higüy (República Dominicana).
-                </p>
-                <p>
-                    Por eso <span>Anitta Excursiones</span> selecciona a los mejores para que el éxito de sus vacaciones
-                    esté asegurado.
-                </p>
-            </div>
-            <div class="col-md-6 col-sm-12 my-auto">
-                <img src="../img/empresa2.jpg" class="img-fluid p-4" alt="Nosotros">
-            </div>
+        <div class="container-fluid contacto">
+        <div class="myForm">
+            <h3 class="text-center">Reservaciones</h3>
+            <form class="needs-validation">
+                <div class="form-group has-validation">
+                    <input class="form-control" type="email" placeholder="Correo electrónico" required>
+                </div>
+                <div class="form-group has-validation">
+                    <input class="form-control" type="text" placeholder="Nombre completo" required>
+                </div>
+                <div class="form-group">
+                    <textarea class="form-control"
+                    name="asunto" placeholder="Su mensaje" required></textarea>
+                </div>
+                <div class="container d-flex justify-content-center">
+                    <input class="btn btn-success w-75" type="submit" value="Enviar">
+                </div>
+            </form>
         </div>
+    </div>
 
     </main>
 
