--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -86,7 +86,7 @@
                     name="asunto" placeholder="Su mensaje" required></textarea>
                 </div>
                 <div class="container d-flex justify-content-center">
-                    <input class="btn btn-success w-75" type="submit" value="Enviar">
+                    <input class="btn btn-primary w-75" type="submit" value="Enviar">
                 </div>
             </form>
         </div>
