--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anitta Excursiones</title>
+    <meta name="description" content="Somos Anitta Excursiones. Una empresa de vasta experiencia en el turismo de República Dominicana.">
+    <meta name="author" content="Claudio Masa">
+    <meta name="copyright" content="Anitta Excursiones">
+    <title>Anitta Excursiones - Nosotros</title>
     <!-- Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -13,12 +16,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Favicon -->
+	<link rel="shortcut icon" href="../img/logo-small.png" type="image/x-icon">
     <!-- Hoja de Estilos-->
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
-
+<!-- BANNER ANIMADO -->
     <header class="container-fluid">
         <div class="banner">
             <div class="playa cielo"></div>
@@ -38,6 +43,7 @@
         </div>
     </header>
 
+    <!-- BARRA DE NAVEGACIÓN -->
     <div class="container-fluid sticky-top">
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
@@ -68,16 +74,17 @@
     </div>
     </nav>
 
+    <!-- CONTENIDO PRINCIPAL -->
     <main class="container-fluid">
-        <h1>Sobre nosotros</h1>
+        <h1>Confíe en nuestra experiencia</h1>
 
         <div class="row nosotros">
             <div class="col-md-6 col-sm-12">
                 <h3>Anitta Excursiones</h3>
                 <p>
-                    Somos una empresa dedicada desde hace 10 años a la venta de excursiones con un equipo profesional que
-                    atiende todos los detalles para que su elección sea la mejor entre muchas. Desde la atencion
-                    personalizada hasta selección de propuestas, nuestro compromiso con nuestros clientes hace que día a
+                    Somos una empresa dedicada desde hace 10 años a la <strong>venta de excursiones con un equipo profesional</strong> que
+                    atiende todos los detalles para que su elección sea la mejor entre muchas. Desde la <strong>atencion
+                    personalizada</strong> hasta selección de propuestas, nuestro <strong>compromiso con nuestros clientes</strong> hace que día a
                     día nuestro prestigio crezca en este bello país.
                 </p>
                 <p>
@@ -86,7 +93,7 @@
                     debido a la falta de estas cosas que son esenciales.
                 </p>
                 <p>
-                    Contamos con Licencia de Tour Operador de la Resolución 166/2013 del Ministerio de Turismo (MITUR)
+                    Contamos con <strong>Licencia de Tour Operador</strong> de la Resolución 166/2013 del Ministerio de Turismo (MITUR)
                     de República Diminicana, con RNC 1-30-92731-6 y domicilio social en Calle Galicia, s/n, Bávaro-Punta
                     Cana en el municipio de Higüy (República Dominicana).
                 </p>
@@ -96,12 +103,13 @@
                 </p>
             </div>
             <div class="col-md-6 col-sm-12 my-auto">
-                <img src="../img/empresa2.jpg" class="img-fluid p-4" alt="Nosotros">
+                <img src="../img/empresa2.jpg" class="img-fluid p-4" alt="Fotos de vacaciones">
             </div>
         </div>
 
     </main>
 
+    <!-- FOOTER -->
     <footer class="container-fluid">
         <div class="foot redes">
             <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
