--- a/pages/transporte.html
+++ b/pages/transporte.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anitta Excursiones</title>
+    <meta name="description" content="Tenemos nuestros propios transportes para que su experiencia sea total. Los mejores vehículos totalmente equipados para su comfort.">
+	<meta name="author" content="Claudio Masa">
+    <meta name="copyright" content="Anitta Excursiones">
+    <title>Anitta Excursiones - Traslados</title>
     <!-- Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -13,12 +16,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Favicon -->
+	<link rel="shortcut icon" href="../img/logo-small.png" type="image/x-icon">
     <!-- Hoja de Estilos-->
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
-
+    <!-- BANNER ANIMADO -->
     <header class="container-fluid">
         <div class="banner">
             <div class="playa cielo"></div>
@@ -38,6 +43,7 @@
         </div>
     </header>
 
+    <!-- BARRA DE NAVEGACIÓN -->
     <div class="container-fluid sticky-top">
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
@@ -68,26 +74,27 @@
     </div>
     </nav>
 
+    <!-- CONTENIDO PRINCIPAL -->
     <main class="container-fluid">
-        <h1>Transporte</h1>
+        <h1>Traslados en Santo Domingo</h1>
 
         <div class="row justify-content-center transporte">
             <div class="col-10 vehiculos">
             </div>
             <div class="col-md-6 col-sm-12">
-                <h3>Nuestros Traslados</h3>
+                <h3>Nuestros Transportes</h3>
                 <p>
-                    Organizamos tus traslados desde los aeropuertos de Punta Cana, La Romana o Santo Domingo.
+                    Organizamos tus traslados desde los <strong>aeropuertos de Punta Cana, La Romana o Santo Domingo</strong>.
                     Nuestra flota de vehículos te llevarán desde los distintos aeropuertos a cualquiera de los magníficos resorts ubicados en las zonas de Bayahibe, Punta Cana, Zona Bávaro, Uvero Alto y Santo Domingo.
                 </p>
                 <p>
-                    Confía en nuestros traslados en Punta Cana para que comiences a disfrutar todo lo que este increíble destino te ofrece, desde el mismo momento de tu llegada.
+                    <strong>Confía en nuestros traslados en Punta Cana</strong> para que comiences a disfrutar todo lo que este increíble destino te ofrece, desde el mismo momento de tu llegada.
                     Atracciones acuáticas, lanchas rápidas de carreras, navegación en catamarán, barcos de fiesta, pesca deportiva en aguas profundas, cruceros, spas flotantes, natación con delfines, cruceros de esnórquel, cabalgatas, natación con tiburones y mantarrayas, observación de ballenas y exploración de arrecifes.
                 </p>
                 <p>
-                    Utiliza nuestros servicios de transporte para visitar Santo Domingo, la capital más antigua del Nuevo Mundo, la primera ciudad fundada en América.
+                    Utiliza nuestros servicios de transporte para visitar Santo Domingo, la capital más antigua del Nuevo Mundo, <strong>la primera ciudad fundada en América</strong>.
                 <p>
-                    No pierdas la oportunidad de reservar una excursión para visitar islas como Catalina o Saona, en las cuales no importa cuál sea tu idea de paraíso, seguro la encontrarás.
+                    No pierdas la oportunidad de reservar una excursión para <strong>visitar islas como Catalina o Saona</strong>, en las cuales no importa cuál sea tu idea de paraíso, seguro la encontrarás.
                 </p>    
             </div>
 
@@ -101,42 +108,13 @@
                     Nuestros vehículos cuentan con <span>servicio de WiFi, cámaras de seguridad, GPS, botellas de agua fresca y aire acondicionado.</span> Nuestros precios incluyen todo lo necesario para que seas el protagonista principal de nuestro trabajo. También tendrás un seguro de accidentes incluido en las excursiones en Punta Cana.
                 </p>
                 <p>
-                    Evita los imprevistos, si buscas tranquilidad en uno de los viajes más inolvidables de tu vida, para experimentarlo con total seguridad y comodidad, ¿qué esperas para reservar tu transporte y comenzar a planear tus vacaciones? Puedes hacer tu reserva online hoy mismo! Contacta con nosotros y confíanos tus traslados.
+                    Evita los imprevistos, si buscas tranquilidad en uno de los viajes más inolvidables de tu vida, para experimentarlo con total seguridad y comodidad, ¿qué esperas para reservar tu transporte y comenzar a planear tus vacaciones? <strong>Puedes hacer tu reserva online hoy mismo!</strong> Contacta con nosotros y confíanos tus traslados.
                 </p>    
             </div>
         </div>
-
-        <!-- <div class="row nosotros">
-            <div class="col-md-6 col-sm-12">
-                <h3>Anitta Excursiones</h3>
-                <p>
-                    Somos una empresa dedicada desde hace 10 años a la venta de excursiones con un equipo profesional que
-                    atiende todos los detalles para que su elección sea la mejor entre muchas. Desde la atencion
-                    personalizada hasta selección de propuestas, nuestro compromiso con nuestros clientes hace que día a
-                    día nuestro prestigio crezca en este bello país.
-                </p>
-                <p>
-                    Trabajamos bajo todos los lineamientos de las leyes dominicanas, permisos, seguros y licencias, esto
-                    es muy importante ya que se encuentran muchas páginas donde las excursiones son mucho más económicas
-                    debido a la falta de estas cosas que son esenciales.
-                </p>
-                <p>
-                    Contamos con Licencia de Tour Operador de la Resolución 166/2013 del Ministerio de Turismo (MITUR)
-                    de República Diminicana, con RNC 1-30-92731-6 y domicilio social en Calle Galicia, s/n, Bávaro-Punta
-                    Cana en el municipio de Higüy (República Dominicana).
-                </p>
-                <p>
-                    Por eso <span>Anitta Excursiones</span> selecciona a los mejores para que el éxito de sus vacaciones
-                    esté asegurado.
-                </p>
-            </div>
-            <div class="col-md-6 col-sm-12 my-auto">
-                <img src="../img/empresa2.jpg" class="img-fluid p-4" alt="Nosotros">
-            </div>
-        </div> -->
-
     </main>
 
+    <!-- FOOTER -->
     <footer class="container-fluid">
         <div class="foot redes">
             <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
