--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Empresa dedicada al Turismo en República Dominicana. Los mejores destinos en Santo Domingo. Reservas Online. Ofertas por paquetes.">
+    <meta name="author" content="Claudio Masa">
+    <meta name="copyright" content="Anitta Excursiones">
+    <!-- OpenGraph -->
+    <meta property="og:title" content="Anitta Excursiones">
+    <meta property="og:site_name" content="Turismo en Punta Cana">
+    <meta property="og:description" content="Especialistas en Turismo en Santo Domingo.">
+    <meta property="og:type" content="place">
+    <!-- Título -->
     <title>Anitta Excursiones</title>
     <!-- Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -13,12 +22,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="./img/logo-small.png" type="image/x-icon">
     <!-- Hoja de Estilos-->
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
 
+    <!-- BANNER ANIMADO -->
     <header class="container-fluid">
         <div class="banner">
             <div class="playa cielo"></div>
@@ -32,7 +44,7 @@
                 <div class="playa espuma"></div>
             </div>
             <div class="playa hoja-palmera-r">
-                <img src="./img/hoja-r-ch.png" alt="">
+                <img src="./img/hoja-r-ch.png" alt="Palmera en la playa">
             </div>
             <div class="playa arena-frente"></div>
         </div>
@@ -69,9 +81,10 @@
     </nav>
 </div>
 
+    <!-- CONTENIDO PRINCIPAL -->
     <main class="container-fluid">
-        <h1>Anitta Excursiones</h1>
-        <h2>Una experiencia única en Santo Domingo</h2>
+        <h1>Excursiones en Santo Domingo</h1>
+        <h2>Una experiencia única en República Dominicana</h2>
         
         <!-- GALERIA DE IMAGENES - HOME  -->
         <div class="galeria">
@@ -106,33 +119,31 @@
             <div class="motivos">
                 <div class="mot mot-1">
                     <h3>Tour Operador Responsable</h3>
-                    <p>Somos un Tour Operador Receptivo y de Excursiones Responsable con la Licencia de Operación
+                    <p>Somos un <strong>Tour Operador Receptivo y de Excursiones Responsable</strong> con la Licencia de Operación
                         otorgada por el Ministerio de Turismo (MITUR), en su Resolución Número 166/2013, cumplimos con
                         la regulaciones y disposiciones contenidas en la Ley Orgánica de Turismo Número 541.</p>
                 </div>
                 <div class="mot mot-2">
                     <h3>Traslados</h3>
-                    <p>Desde la puntualidad, la atención el seguimiento de nuestros choferes y la satisfacción de
-                        nuestros clientes son las medidas exactas para que todo salga excelente.</p>
+                    <p>Desde la puntualidad, la atención el seguimiento de nuestros choferes y la <strong>satisfacción de
+                        nuestros clientes</strong> son las medidas exactas para que todo salga excelente.</p>
                 </div>
                 <div class="mot mot-3">
                     <h3>Excursiones Únicas</h3>
                     <p>Cuando hablamos de excursiones hablamos de gente trabajando para que toda la experiencia sea
-                        especial y única. Sabemos cómo hacerlo y a quien seleccionar para confiar nuestros servicios,
-                        sin duda a los mejores.</p>
+                        especial y única. <strong>Confíe en nuestros servicios.</strong></p>
                 </div>
                 <div class="mot mot-4">
                     <h3>Los Mejores Precios</h3>
-                    <p>Al momento de elegir los precios son muy importantes y por eso hemos llegado al equilibrio justo,
-                        donde los mejores precios que tenemos mantienen la óptima calidad de los servicios, somos
-                        conscientes de la delgada línea entre el precio y el servicio.</p>
+                    <p>Sabemos que los costos son muy importantes y por eso hemos llegado al equilibrio justo.
+                        <strong>Garantizamos los mejores precios y una óptima calidad de servicios.</strong></p>
                 </div>
                 <div class="mot mot-5">
                     <h3>Seguridad y Garantía</h3>
                     <p>Cuando contrates excursiones por internet, exígeles que te muestren la licencia de Tour Operador
                         y los Seguros obligatorios exigibles por la Ley Dominicana, ya que hay muchos ¨Piratas¨ que no
-                        dan la SEGURIDAD Y GARANTIAS. Solicita Nuestros Permisos y encatados te los mostramos. Con
-                        nosotros siempre estarás protegido.
+                        dan la SEGURIDAD Y GARANTIAS. Solicita Nuestros Permisos y encatados te los mostramos. <strong>Con
+                        nosotros siempre estarás protegido.</strong>
                     </p>
                 </div>
             </div>
@@ -140,6 +151,7 @@
 
     </main>
 
+    <!-- FOOTER -->
     <footer class="container-fluid">
         <div class="foot redes">
             <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
