--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anitta Excursiones</title>
+    <meta name="description" content="Contáctenos para conocer ofertas personalizadas y reservar de forma online.">
+	<meta name="author" content="Claudio Masa">
+    <meta name="copyright" content="Anitta Excursiones">
+    <title>Anitta Excursiones - Contacto</title>
     <!-- Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -13,12 +16,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Favicon -->
+	<link rel="shortcut icon" href="../img/logo-small.png" type="image/x-icon">
     <!-- Hoja de Estilos-->
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
-
+    <!-- BANNER ANIMADO -->
     <header class="container-fluid">
         <div class="banner">
             <div class="playa cielo"></div>
@@ -38,6 +43,7 @@
         </div>
     </header>
 
+    <!-- BARRA DE NAVEGACIÓN -->
     <div class="container-fluid sticky-top">
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
@@ -68,8 +74,9 @@
     </div>
     </nav>
 
+    <!-- CONTENIDO PRINCIPAL -->
     <main class="container-fluid">
-        <h1>Contactenos</h1>
+        <h1>Cómo contactarnos?</h1>
 
         <div class="container-fluid contacto">
         <div class="myForm">
@@ -94,6 +101,7 @@
 
     </main>
 
+    <!-- FOOTER -->
     <footer class="container-fluid">
         <div class="foot redes">
             <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
