--- a/pages/tours.html
+++ b/pages/tours.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anitta Excursiones</title>
+    <meta name="description" content="Los mejores tours y excursiones en Santo Domingo y Punta Cana. Gran variedad de destinos turísticos.">
+    <meta name="author" content="Claudio Masa">
+    <meta name="copyright" content="Anitta Excursiones">
+    <title>Anitta Excursiones - Tours</title>
     <!-- Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -13,12 +16,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Favicon -->
+	<link rel="shortcut icon" href="../img/logo-small.png" type="image/x-icon">
     <!-- Hoja de Estilos-->
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
 
+    <!-- BANNER ANIMADO -->
     <header class="container-fluid">
         <div class="banner">
             <div class="playa cielo"></div>
@@ -38,6 +44,7 @@
         </div>
     </header>
 
+    <!-- BARRA DE NAVEGACIÓN -->
     <div class="container-fluid sticky-top">
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
@@ -68,8 +75,9 @@
     </div>
     </nav>
 
+    <!-- CONTENIDO PRINCIPAL -->
     <main class="container-fluid">
-        <h1>Nuestras Excursiones</h1>
+        <h1>Las Mejores Excursiones en Santo Domingo</h1>
 
         <div class="container tours">
             <!-- ROW GENERAL -->
@@ -80,12 +88,12 @@
                         <h3>Santo Domingo City Tour</h3>
                         <div class="myCard">
                             <div class="d-flex justify-content-center frente">
-                                <img src="../img/gal-01.jpg" alt="">
+                                <img src="../img/gal-01.jpg" alt="Santo Domingo Colonial">
                             </div>
                             <div class="dorso">
                                 <p>
                                     Recorriendo monumentos históricos de la Parte Colonial.
-                                    Conozca el Palacio Presidencial Nacional y obtenga fantásticas vistas del centro.
+                                    Conozca el <strong>Palacio Presidencial Nacional</strong> y obtenga fantásticas vistas del centro.
                                     Se incluye almuerzo en un restaurante tradicional dominicano y transporte de ida y vuelta desde los hoteles de Punta Cana.
                                 </p>
                                 <div class="d-flex justify-content-center">
@@ -101,11 +109,11 @@
                         <h3>Dolphin Park</h3>
                         <div class="myCard">
                             <div class="d-flex justify-content-center frente">
-                                <img src="../img/dolphinPark.jpg" alt="">
+                                <img src="../img/dolphinPark.jpg" alt="Delfines saltando sobre el agua">
                             </div>
                             <div class="dorso">
                                 <p>
-                                    Dolphin Park es el lugar indicado para pasar un día distinto, un parque natural ubicado en Punta Cana, cuyo atractivo principal es el nado e interacción con delfines en el mar. 
+                                    Dolphin Park es el lugar indicado para pasar un día distinto, un parque natural ubicado en Punta Cana, cuyo atractivo principal es el nado e interacción con <strong>delfines en el mar</strong>. 
                                 </p>
                                 <div class="d-flex justify-content-center">
                                     <a class="btn btn-outline-primary" href="#" role="button">Reserva</a>
@@ -120,11 +128,11 @@
                         <h3>Isla Saona</h3>
                         <div class="myCard">
                             <div class="d-flex justify-content-center frente">
-                                <img src="../img/islaSaona.jpg" alt="">
+                                <img src="../img/islaSaona.jpg" alt="Pequeño bote">
                             </div>
                             <div class="dorso">
                                 <p>
-                                    Vive una experiencia inolvidable en la isla Saona, una de las excursiónes más populares en la República Dominicana. Explora la playa tropical por excelencia con sus palmeras, arenas blancas y aguas turquesas.
+                                    Vive una experiencia inolvidable en la <strong>Isla Saona</strong>, una de las excursiónes más populares en la República Dominicana. Explora la playa tropical por excelencia con sus palmeras, arenas blancas y aguas turquesas.
                                 </p>
                                 <div class="d-flex justify-content-center">
                                     <a class="btn btn-outline-primary" href="#" role="button">Reserva</a>
@@ -139,13 +147,13 @@
                         <h3>Compay Safari</h3>
                         <div class="myCard">
                             <div class="d-flex justify-content-center frente">
-                                <img src="../img/safari.jpg" alt="">
+                                <img src="../img/safari.jpg" alt="Excursiones a caballo">
                             </div>
                             <div class="dorso">
                                 <p>
-                                    Suba a bordo de un camión de estilo safari para explorar la República Dominicana en esta excursión guiada de todo el día. 
+                                    Suba a bordo de un camión de estilo safari para explorar la <strong>República Dominicana</strong> en esta excursión guiada de todo el día. 
                                     Viaje por el campo y pase por plantaciones de caña de azúcar, café, cacao y tabaco.
-                                    Conozca la Basílica Catedral Nuestra Señora de la Altagracia, conocida por sus formas triangulares.
+                                    Conozca la <strong>Basílica Catedral Nuestra Señora de la Altagracia</strong>, conocida por sus formas triangulares.
                                 </p>
                                 <div class="d-flex justify-content-center">
                                     <a class="btn btn-outline-primary" href="#" role="button">Reserva</a>
@@ -160,13 +168,13 @@
                         <h3>Catalina Excursión</h3>
                         <div class="myCard">
                             <div class="d-flex justify-content-center frente">
-                                <img src="../img/catalina.jpg" alt="">
+                                <img src="../img/catalina.jpg" alt="Isla Catalina">
                             </div>
                             <div class="dorso">
                                 <p>
-                                    Navegará a lo largo de la costa de República Dominicana hasta la isla Catalina para relajarse en sus idílicas playas y explorar el Muro, el famoso sitio de buceo de la zona.
+                                    Navegará a lo largo de la costa de República Dominicana hasta la <strong>Isla Catalina</strong> para relajarse en sus idílicas playas y explorar <strong>el Muro</strong>, el famoso sitio de buceo de la zona.
                                     También tendrá acceso a un bar abierto, mientras disfruta de música en vivo y entretenimiento.
-                                    Incluye equipo de snorkel, transporte y bebidas.
+                                    Incluye equipo de <strong>snorkel</strong>, transporte y bebidas.
                                 </p>
                                 <div class="d-flex justify-content-center">
                                     <a class="btn btn-outline-primary" href="#" role="button">Reserva</a>
@@ -181,14 +189,14 @@
                         <h3>Salto del Limon</h3>
                         <div class="myCard">
                             <div class="d-flex justify-content-center frente">
-                                <img src="../img/limon.jpg" alt="">
+                                <img src="../img/limon.jpg" alt="Catarata Limon">
                             </div>
                             <div class="dorso">
                                 <p>
-                                    Comienza tomando la nueva carretera al pueblo de pescadores de Miches.
-                                    Un viaje para observar la campiña a lo largo de la costa y la cordillera de Anamuya.
-                                    Irá a bordo de un catamarán de lujo en Las Cañitas.
-                                    Explore las magníficas vistas de la catarata El Limón (36 metros).
+                                    Comienza tomando la nueva carretera al <strong>pueblo de pescadores de Miches</strong>.
+                                    Un viaje para observar la campiña a lo largo de la costa y la <strong>cordillera de Anamuya</strong>.
+                                    Irá a bordo de un catamarán de lujo en <strong>Las Cañitas</strong>.
+                                    Explore las magníficas vistas de la <strong>catarata El Limón</strong> (36 metros).
                                     Le cautivará su espectacular belleza. Disfrutará de un almuerzo en un rancho rural típico.
                                 </p>
                                 <div class="d-flex justify-content-center">
@@ -203,6 +211,7 @@
 
     </main>
 
+    <!-- FOOTER -->
     <footer class="container-fluid">
         <div class="foot redes">
             <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
