--- a/pages/tours.html
+++ b/pages/tours.html
@@ -8,6 +8,12 @@
     <meta name="description" content="Los mejores tours y excursiones en Santo Domingo y Punta Cana. Gran variedad de destinos turísticos.">
     <meta name="author" content="Claudio Masa">
     <meta name="copyright" content="Anitta Excursiones">
+    <!-- OpenGraph -->
+    <meta property="og:title" content="Anitta Excursiones">
+    <meta property="og:site_name" content="Turismo en Punta Cana">
+    <meta property="og:description" content="Las mejores y más variadas excursiones.">
+    <meta property="og:type" content="place">
+    <!-- Título -->
     <title>Anitta Excursiones - Tours</title>
     <!-- Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
