--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,6 +8,12 @@
     <meta name="description" content="Contáctenos para conocer ofertas personalizadas y reservar de forma online.">
 	<meta name="author" content="Claudio Masa">
     <meta name="copyright" content="Anitta Excursiones">
+    <!-- OpenGraph -->
+    <meta property="og:title" content="Anitta Excursiones">
+    <meta property="og:site_name" content="Turismo en Punta Cana">
+    <meta property="og:description" content="Conctactanos y hace tu reserva Online">
+    <meta property="og:type" content="place">
+    <!-- Título -->
     <title>Anitta Excursiones - Contacto</title>
     <!-- Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
