--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -8,6 +8,12 @@
     <meta name="description" content="Somos Anitta Excursiones. Una empresa de vasta experiencia en el turismo de República Dominicana.">
     <meta name="author" content="Claudio Masa">
     <meta name="copyright" content="Anitta Excursiones">
+    <!-- OpenGraph -->
+    <meta property="og:title" content="Anitta Excursiones">
+    <meta property="og:site_name" content="Turismo en Punta Cana">
+    <meta property="og:description" content="Nuestra experiencia nos avala.">
+    <meta property="og:type" content="place">
+    <!-- Título -->
     <title>Anitta Excursiones - Nosotros</title>
     <!-- Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
