--- a/pages/transporte.html
+++ b/pages/transporte.html
@@ -8,6 +8,12 @@
     <meta name="description" content="Tenemos nuestros propios transportes para que su experiencia sea total. Los mejores vehículos totalmente equipados para su comfort.">
 	<meta name="author" content="Claudio Masa">
     <meta name="copyright" content="Anitta Excursiones">
+    <!-- OpenGraph -->
+    <meta property="og:title" content="Anitta Excursiones">
+    <meta property="og:site_name" content="Turismo en Punta Cana">
+    <meta property="og:description" content="Traslados de máxima calidad y servicio.">
+    <meta property="og:type" content="place">
+    <!-- Título -->
     <title>Anitta Excursiones - Traslados</title>
     <!-- Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
