--- a/pages/transporte.html
+++ b/pages/transporte.html
@@ -11,8 +11,10 @@
     <!-- OpenGraph -->
     <meta property="og:title" content="Anitta Excursiones">
     <meta property="og:site_name" content="Turismo en Punta Cana">
+    <meta property="og:url" content="https://anittaexcursiones.000webhostapp.com/">
     <meta property="og:description" content="Traslados de máxima calidad y servicio.">
     <meta property="og:type" content="place">
+    <meta property="og:image" content="https://anittaexcursiones.000webhostapp.com/img/logo-small.png">
     <!-- Título -->
     <title>Anitta Excursiones - Traslados</title>
     <!-- Bootstrap-->
