--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://anittaexcursiones.000webhostapp.com/">
     <meta property="og:description" content="Nuestra experiencia nos avala.">
     <meta property="og:type" content="place">
-    <meta property="og:image" content="https://anittaexcursiones.000webhostapp.com/img/logo-small.png">
+    <meta property="og:image" content="https://anittaexcursiones.000webhostapp.com/img/logo-mini.png">
     <!-- Título -->
     <title>Anitta Excursiones - Nosotros</title>
     <!-- Bootstrap-->
